--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# server configuration
+server.servlet.context-path=/open-academy
+server.port=8089
 
+#Para URL 404
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.mvc.static-path-pattern=/static
+
+#
+jwt.secret=open-@cadem&
+
+# Conexion a Mongo
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=openacademy
+spring.data.mongodb.password=openacademy-123
+spring.data.mongodb.database=openacademy_v01
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=10.0.20.208
